Programmers lv1 알고리즘 문제 풀기

--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>javaEx</name>
-	<comment></comment>
+	<name>datastructure</name>
+	<comment>Project java created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
@@ -10,13 +10,19 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>org.eclipse.buildship.core.gradleprojectbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.buildship.core.gradleprojectnature</nature>
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1602167307608</id>
+			<id>1603195738982</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
